--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,38 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      href="/ChatGPT Image May 7, 2025 at 12_14_24 PM-Photoroom.png"
+      type="image/png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alertly</title>
+
+    <title>Alertly - AI News Agent on WhatsApp</title>
+    <meta
+      name="description"
+      content="Alertly is an AI agent that delivers tailored and engaging news articles directly to your WhatsApp for just ₦400/month."
+    />
+    <meta
+      name="keywords"
+      content="Alertly, WhatsApp news, AI news, Nigerian news, smart news, news agent, Alertly_AI"
+    />
+    <meta name="author" content="Adetona Adegbite" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Alertly – AI News Agent on WhatsApp" />
+    <meta
+      property="og:description"
+      content="Get personalized and reformatted news directly on WhatsApp. Only ₦400/month."
+    />
+    <meta property="og:image" content="/cover.jpg" />
+    <!-- Update to your real image path -->
+    <meta property="og:url" content="https://alertly.vercel.app" />
+    <meta property="og:type" content="website" />
+
+    <!-- Instagram (No special meta needed, but link to profile is good for SEO) -->
+    <meta name="instagram:creator" content="@alertly_ai" />
+    <link rel="me" href="https://instagram.com/alertly_ai" />
   </head>
   <body>
     <div id="root"></div>
